--- a/src/styles/Globals.css
+++ b/src/styles/Globals.css
@@ -6,3 +6,10 @@ body{
 b{
     @apply uppercase;
 }
+.scroll-hidden{
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+.scroll-hidden::-webkit-scrollbar{
+    display:none;
+}
