Add animation effects

--- a/src/styles/Globals.css
+++ b/src/styles/Globals.css
@@ -6,6 +6,20 @@ body{
 b{
     @apply uppercase;
 }
+
+@theme {
+  --animate-wiggle: wiggle 1s ease-in-out infinite;
+  @keyframes wiggle {
+    0%,
+    100% {
+      transform: rotate(-20deg);
+    }
+    50% {
+      transform: rotate(20deg);
+    }
+  }
+}
+
 .scroll-hidden{
     scrollbar-width: none;
     -ms-overflow-style: none;
